--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "pwa-text-editor",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "16.18.0"
+  },
   "scripts": {
-    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
-    "start": "npm run build && cd server && node server.js",
+    "start": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+    "start:dev": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
