--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "pwa-text-editor",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "16.18.0",
+    "npm": "8.19.2"
+  },
   "scripts": {
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
