--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "npm": "8.19.2"
   },
   "scripts": {
-    "start": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
-    "start:dev": "npm run build && cd server && node server.js",
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run start\"",
+    "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
